# realtime-chat-demo

./: .env.example  Cargo.toml  README.md
migrations/: 001_create_chat_table.sql
src/: main.rs
