[package]
name = "chat-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
dotenvy = "0.15.7"
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
supabase-client-rs = { version = "0.1.0", features = ["realtime"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-postgres = { version = "0.7.15", features = ["with-serde_json-1"] }
tower-http = { version = "0.6.7", features = ["fs", "trace"] }
tracing = "0.1.42"
tracing-subscriber = { version = "0.3.21", features = ["env-filter"] }
